--- a/expanding-cards/assets/css/style.css
+++ b/expanding-cards/assets/css/style.css
@@ -1,10 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Mulish&display=swap");
 * {
   box-sizing: border-box;
 }
 
 body {
-  font-family: "Muli", sans-serif;
+  font-family: Verdena, Geneva, Tahoma, sans-serif;
   margin: 0;
   display: flex;
   align-items: center;
@@ -22,37 +21,59 @@ body {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 80vh;
-  border-radius: 50px;
+  height: 70vh;
+  border-radius: 20px;
   flex: 0.5;
   position: relative;
-  transition: flex 0.5s ease-in;
+  transition: flex 0.7s ease-in;
   color: #fff;
   cursor: pointer;
   margin: 10px;
+  display: flex;
+  flex-direction: column;
 }
-.panel h3 {
+.panel .details h3 {
+  font-size: 24px;
+  opacity: 0;
+}
+.panel .details p {
+  font-size: 16px;
+  opacity: 0;
+}
+
+.details {
   position: absolute;
   bottom: 20px;
   left: 20px;
-  opacity: 0;
+  visibility: hidden;
 }
 
 .panel.active {
   flex: 5;
 }
-.panel.active h3 {
+.panel.active .details {
+  visibility: visible;
+}
+.panel.active .details h3 {
   opacity: 1;
-  transition: opacity 0.4s ease-in 0.4s;
+  transition: opacity 0.3s ease-in 0.4s;
+}
+.panel.active .details p {
+  opacity: 1;
+  transition: opacity 0.3s ease-in 0.4s;
 }
 
-@media (max-width: 480px) {
+@media (max-width: 1300px) {
   .container {
-    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
   }
 
-  .panel:nth-of-type(4),
-.panel:nth-of-type(5) {
-    display: none;
+  .panel .details h3 {
+    font-size: 16px;
+  }
+  .panel .details p {
+    font-size: 12px;
   }
 }/*# sourceMappingURL=style.css.map */
