--- a/expanding-cards/assets/css/style.scss
+++ b/expanding-cards/assets/css/style.scss
@@ -1,6 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Mulish&display=swap');
-
-$b-font: 'Muli', sans-serif;
+$b-font: Verdena, Geneva, Tahoma, sans-serif;
 
 * {
   box-sizing: border-box;
@@ -25,39 +23,66 @@ body {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 80vh;
-  border-radius: 50px;
+  height: 70vh;
+  border-radius: 20px;
   flex: 0.5;
   position: relative;
-  transition: flex 0.5s ease-in;
+  transition: flex 0.7s ease-in;
   color: #fff;
   cursor: pointer;
   margin: 10px;
+  display: flex;
+  flex-direction: column;
 
-  h3 {
-    position: absolute;
-    bottom: 20px;
-    left: 20px;
+  .details h3 {
+    font-size: 24px;
     opacity: 0;
   }
+
+  .details p {
+    font-size: 16px;
+    opacity: 0;
+  }
+}
+
+.details {
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  visibility: hidden;
 }
 
 .panel.active {
   flex: 5;
 
-  h3 {
+  .details {
+    visibility: visible;
+  }
+  
+  .details h3 {
     opacity: 1;
-    transition: opacity 0.4s ease-in 0.4s;
+    transition: opacity 0.3s ease-in 0.4s;
+  }
+
+  .details p {
+    opacity: 1;
+    transition: opacity 0.3s ease-in 0.4s;
   }
 }
 
-@media (max-width: 480px) {
+@media (max-width: 1300px) {
   .container {
-    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
   }
 
-  .panel:nth-of-type(4),
-  .panel:nth-of-type(5) {
-    display: none;
+  .panel .details {
+    h3 {
+      font-size: 16px;
+    }
+    p {
+      font-size: 12px;
+    }
   }
 }
